# cre-escrow-ghost

./: .env.example  .gitignore  README.md  bu-hackathon-submission.md  package.json  turbo.json
apps/api/: .dev.vars  .dev.vars.example  package.json  tsconfig.json  tsup.config.ts  wrangler.toml
apps/contract-builder/: package.json
apps/cre/: .env.example  .gitignore  README.md  package.json  secrets.yaml  tsconfig.workflow.json
apps/docs/: package.json  tsconfig.json
contracts/escrow/: foundry.toml
hardhat/: .env.example  README.md  hardhat.bufi.config.ts  hardhat.config.ts  package-lock.json  package.json  remappings.txt  tsconfig.json
hardhat/cache-bufi/: solidity-files-cache.json
hardhat/ccip-templates/: BasicTokenSender.sol  ProgrammableTokenTransfers.sol
hardhat/cre-templates/: .gitignore  .gitmodules  README.md
hardhat/scripts/: deploy-bufi-fuji.ts
hardhat/typechain-types/: LotusRouter.ts  hardhat.d.ts  index.ts
proof/agentic-ui/: advocate-brief-card.tsx  audit-trail.tsx  contracts-widget.tsx  supreme-court-panel.tsx
proof/contracts/: contracts.ts  error-recovery.tsx  timeout-indicator.tsx
proof/cre-contracts/: foundry.toml
proof/cre-scripts/: SIMULATION-GUIDE.md  deploy-arb-sepolia-all.ts  deploy-escrow-factory-arb.ts  deploy-escrow-factory.ts  deploy.sh  new-workflow.sh  simulate-all.sh  simulate.sh
proof/cre-workflows/: project.yaml
proof/ghost-mode/: ghost-fhe.routes.ts  (+3 more)
proof/solana-escrow/programs/bu-escrow/: Cargo.toml
proof/solana-escrow/programs/bu-escrow/src/: lib.rs
scripts/: bufi-smoke.ts
tasks/: lessons.md  todo.md
(+1070 files in other folders)
