[package]
name = "bu-escrow"
version = "0.1.0"
description = "Bu Finance — Milestone-based USDC escrow with AI arbitration on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bu_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token", "token_2022"] }
bytemuck = { version = "1.25", features = ["derive"] }
